Fixed security issues